# soundfx-rs

./: .env  Cargo.toml  README.md  create.sql
.cargo/: config
audio/: audio.json
conf/: default.env
debian/: postinst  postrm
migrations/: 20210903000000_move_roles.sql  20220730-expand-join-sounds.sql  20230322-disable-user-greets.sql
regex_command_attr/src/: attributes.rs  lib.rs  structures.rs  util.rs
src/: consts.rs  error.rs  event_handlers.rs  framework.rs  guild_data.rs  guilddata.rs  main.rs  sound.rs  utils.rs
src/cmds/: info.rs  manage.rs  mod.rs  play.rs  search.rs  settings.rs  stop.rs
src/models/: guild_data.rs  join_sound.rs  mod.rs  sound.rs
systemd/: soundfx-rs.service
