[package]
name = "soundfx-rs"
version = "1.5.0"
authors = ["jellywx <judesouthworth@pm.me>"]
edition = "2018"

[dependencies]
songbird = { git = "https://github.com/serenity-rs/songbird", branch = "next", features = ["builtin-queue"] }
poise = { git = "https://github.com/kangalioo/poise", branch = "master", features = ["collector"] }
sqlx = { version = "0.5", default-features = false, features = ["runtime-tokio-rustls", "macros", "mysql", "bigdecimal"] }
dotenv = "0.15"
tokio = { version = "1", features = ["fs", "process", "io-util"] }
lazy_static = "1.4"
reqwest = "0.11"
env_logger = "0.8"
regex = "1.4"
log = "0.4"
serde_json = "1.0"
dashmap = "4.0"
