[package]
name = "soundfx-rs"
version = "1.5.6"
authors = ["jellywx <judesouthworth@pm.me>"]
edition = "2018"

[dependencies]
songbird = { version = "0.3", features = ["builtin-queue"] }
poise = "0.3"
sqlx = { version = "0.5", default-features = false, features = ["runtime-tokio-rustls", "macros", "mysql", "bigdecimal"] }
tokio = { version = "1", features = ["fs", "process", "io-util"] }
lazy_static = "1.4"
reqwest = "0.11"
env_logger = "0.9"
regex = "1.4"
log = "0.4"
serde_json = "1.0"
dashmap = "5.3"
serde = "1.0"

[patch."https://github.com/serenity-rs/serenity"]
serenity = { version = "0.11.5" }
