[package]
name = "soundfx-rs"
description = "Discord bot for custom sound effects and soundboards"
license = "AGPL-3.0-only"
version = "1.5.7"
authors = ["jellywx <judesouthworth@pm.me>"]
edition = "2018"

[dependencies]
songbird = { version = "0.3", features = ["builtin-queue"] }
poise = "0.3"
sqlx = { version = "0.5", default-features = false, features = ["runtime-tokio-rustls", "macros", "mysql", "bigdecimal", "migrate"] }
tokio = { version = "1", features = ["fs", "process", "io-util"] }
lazy_static = "1.4"
reqwest = "0.11"
env_logger = "0.10"
regex = "1.4"
log = "0.4"
serde_json = "1.0"
dashmap = "5.3"
serde = "1.0"
dotenv = "0.15.0"

[patch."https://github.com/serenity-rs/serenity"]
serenity = { version = "0.11.5" }

[package.metadata.deb]
depends = "$auto, ffmpeg"
suggests = "mysql-server-8.0"
maintainer-scripts = "debian"
assets = [
    ["target/release/soundfx-rs", "usr/bin/soundfx-rs", "755"],
    ["conf/default.env", "etc/soundfx-rs/default.env", "600"]
]

[package.metadata.deb.systemd-units]
unit-scripts = "systemd"
start = false
